--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a46d659aa4.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="./css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- <link rel="stylesheet" href="./css/fontawesome.min.css"> -->
     <title>Trang chủ</title>
     <script src="./js/var.js"></script>
+    <script src="./js/jquery.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Chỉnh tên file lại thành tên file của mình -->
+    <link rel="stylesheet" href="./css/admin.css"> 
 </head> 
 <body>
     <!-- Header -->
@@ -39,7 +40,7 @@
                     <div class="header-ctn">
                         <div class="container">
                             <div class="dropdown">
-                                <a class="dropdown-toggle">
+                                <a class="dropdown-toggle" href="#">
                                     <i class="fa fa-shopping-cart">
                                     </i>
                                     <span>
@@ -114,13 +115,15 @@
     
     <!-- Body -->
 
-    <article>
+    <article id="body">
 
 
         
     </article>
 
     <!-- /Body -->
+
+    <!-- Footer -->
 
     <footer class="section">
         <div class="container">
