--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/jquery.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Chỉnh tên file lại thành tên file của mình -->
-    <link rel="stylesheet" href="./css/admin.css"> 
+    <!-- <link rel="stylesheet" href="./css/admin.css">  -->
 </head> 
 <body>
     <!-- Header -->
