--- a/admin.html
+++ b/admin.html
@@ -1,31 +1,48 @@
 <div class="feature">
-    <div class="product-info-form">
-        <form action="">
-            <span class="title">Sản Phẩm</span>
-            <label for="">Mã sản phẩm</label>
-            <input type="text" name="" id="id-product">
-            <label for="">Tên sản phẩm</label>
-            <input type="text" name="" id="name-product">
-            <label for="">Giá tiền</label>
-            <input type="text" name="" id="price-product">
-            <label for="">Tình trạng</label>
-            <input type="text" name="" id="status-product">
-            <label for="">Mô tả</label>
-            <input type="text" name="" id="des-product">
+    <div class="product-search body-item">
+        <form class="feature-form" action="">
+            <span class="title">Tìm Kiếm</span>
+            <select name="" id="">
+                <option value="0">Tên sản phẩm</option>
+                <option value="1">Mã sản phẩm</option>
+            </select>
+            <input type="text" name="id-product" id="id-product">
+            <div class="container">
+                <label for="">Giá tiền:</label>
+                <input type="text" class="price-product-input" id="price-product-min">
+                <input type="range">
+                <input type="text" class="price-product-input" id="price-product-max">
+            </div>
             <div>
-                <button class="add-btn">Thêm sản phẩm</button>
-                <button class="dele-btn">Xoá sản phẩm</button>
+                <input type="submit" name="" class="add-btn" value="Tìm">            
             </div>
         </form>
-        
+    </div>
+
+    <div class="product-add body-item">
+        <form action="">
+            <span class="title">Tìm Kiếm</span>
+            <label for="">Mã sản phẩm:</label>
+            <input type="text" name="id-product" id="id-product">
+            <label for="">Tên sản phẩm:</label>
+            <input type="text" name="name-product" id="name-product">
+            <label for="">Giá tiền:</label>
+            <input type="text" name="price-product" id="price-product">
+            <label for="">Tình trạng:</label>
+            <input type="text" name="status-product" id="status-product">
+            <label for="">Mô tả:</label>
+            <input type="text" name="des-product" id="des-product">
+            <div>
+                <input type="submit" name="" class="add-btn" value="Tìm">            </div>
+        </form>
     </div>
 </div>
 
-<div class="product-view">
+<div class="product-view body-item">
     <span class="title">Danh sách sản phẩm</span>
     <div class="container">
         <div class="item">
-            <img src="../img/1.webp" alt="">
+            <img src="../img/product1.webp" alt="">
             <div class="des">
                 <span>Giày Thể Thao Nam Hunter Street Cream DSMH10400KEM (Kem)</span>
                 <span>Giá: 780.000</span>
