--- a/admin.html
+++ b/admin.html
@@ -2,16 +2,20 @@
     <div class="product-search body-item">
         <form class="feature-form" action="">
             <span class="title">Tìm Kiếm</span>
-            <select name="" id="">
-                <option value="0">Tên sản phẩm</option>
-                <option value="1">Mã sản phẩm</option>
-            </select>
-            <input type="text" name="id-product" id="id-product">
             <div class="container">
-                <label for="">Giá tiền:</label>
-                <input type="text" class="price-product-input" id="price-product-min">
-                <input type="range">
-                <input type="text" class="price-product-input" id="price-product-max">
+                <select name="" id="">
+                    <option value="0">Tên sản phẩm</option>
+                    <option value="1">Mã sản phẩm</option>
+                </select>
+                <input type="text" name="id-product" id="id-product" placeholder="Nhập tên sản phẩm">
+            </div>
+            <div class="container">
+                <label for="">Khoảng giá:</label>
+            </div>
+            <div class="container">
+                <input type="text" class="price-product-input" id="price-product-min" placeholder="Từ">
+                <div class="price-product-line"></div>
+                <input type="text" class="price-product-input" id="price-product-max" placeholder="Đến">
             </div>
             <div>
                 <input type="submit" name="" class="add-btn" value="Tìm">            
@@ -20,20 +24,30 @@
     </div>
 
     <div class="product-add body-item">
-        <form action="">
-            <span class="title">Tìm Kiếm</span>
-            <label for="">Mã sản phẩm:</label>
-            <input type="text" name="id-product" id="id-product">
-            <label for="">Tên sản phẩm:</label>
-            <input type="text" name="name-product" id="name-product">
-            <label for="">Giá tiền:</label>
-            <input type="text" name="price-product" id="price-product">
-            <label for="">Tình trạng:</label>
-            <input type="text" name="status-product" id="status-product">
-            <label for="">Mô tả:</label>
-            <input type="text" name="des-product" id="des-product">
+        <form class="feature-form">
+            <span class="title">Thêm Sản Phẩm</span>
+            <div class="container">
+                <label for="">Mã sản phẩm:</label>
+                <input type="text" name="id-product" id="id-product">
+            </div>
+            <div class="container">
+                <label for="">Tên sản phẩm:</label>
+                <input type="text" name="name-product" id="name-product">
+            </div>
+            <div class="container">
+                <label for="">Giá tiền:</label>
+                <input type="text" name="price-product" id="price-product">
+            </div>
+            <div class="container">
+                <label for="">Tình trạng:</label>
+                <input type="text" name="status-product" id="status-product">
+            </div>
+            <div class="container">
+                <label for="">Mô tả:</label>
+                <input type="text" name="des-product" id="des-product">
+            </div>
             <div>
-                <input type="submit" name="" class="add-btn" value="Tìm">            </div>
+                <input type="submit" name="" class="add-btn" value="Thêm">            </div>
         </form>
     </div>
 </div>
