--- a/admin.html
+++ b/admin.html
@@ -1,46 +1,48 @@
 <div class="feature">
-    <div class="product-search body-item">
+    <div class="product-search body-item border-gradient">
         <form class="feature-form" action="">
-            <span class="title">Tìm Kiếm</span>
+            <span class="title">Tìm Kiếm Sản Phẩm</span>
             <div class="container">
-                <select name="" id="">
+                <select name="" id="searchSlt">
                     <option value="0">Tên sản phẩm</option>
                     <option value="1">Mã sản phẩm</option>
                 </select>
-                <input type="text" name="id-product" id="id-product" placeholder="Nhập tên sản phẩm">
+                <input type="text" id="product-id-search" placeholder="Nhập tên sản phẩm" oninput="searchChange()">
             </div>
             <div class="container">
                 <label for="">Khoảng giá:</label>
+                <input type="text" class="price-product-input" id="product-price-min" placeholder="0">
+                <div>đ</div>
+                <div class="price-product-line"></div>
+                <input type="text" class="price-product-input" id="product-price-max" placeholder="2.000.000">
+                <div>đ</div>
             </div>
             <div class="container">
-                <input type="text" class="price-product-input" id="price-product-min" placeholder="Từ">
-                <div class="price-product-line"></div>
-                <input type="text" class="price-product-input" id="price-product-max" placeholder="Đến">
             </div>
-            <div>
-                <input type="submit" name="" class="add-btn" value="Tìm">            
-            </div>
+            <!-- <div>
+                <input type="submit" name="" class="search-btn" value="Tìm">            
+            </div> -->
         </form>
     </div>
 
-    <div class="product-add body-item">
+    <div class="product-add body-item border-gradient">
         <form class="feature-form">
             <span class="title">Thêm Sản Phẩm</span>
             <div class="container">
                 <label for="">Mã sản phẩm:</label>
-                <input type="text" name="id-product" id="id-product">
+                <input type="text" readonly name="id-product" id="id-product">
             </div>
             <div class="container">
                 <label for="">Tên sản phẩm:</label>
                 <input type="text" name="name-product" id="name-product">
             </div>
             <div class="container">
-                <label for="">Giá tiền:</label>
+                <label for="">Thể loại:</label>
                 <input type="text" name="price-product" id="price-product">
             </div>
             <div class="container">
-                <label for="">Tình trạng:</label>
-                <input type="text" name="status-product" id="status-product">
+                <label for="">Ảnh:</label>
+                <input type="file" name="status-product" id="status-product">
             </div>
             <div class="container">
                 <label for="">Mô tả:</label>
@@ -52,17 +54,57 @@
     </div>
 </div>
 
-<div class="product-view body-item">
+<div class="product-view body-item border-gradient">
     <span class="title">Danh sách sản phẩm</span>
     <div class="container">
-        <div class="item">
-            <img src="../img/product1.webp" alt="">
+        <!-- <div class="item">
+            <img class="product-img" src="../img/product1.webp" alt="">
             <div class="des">
-                <span>Giày Thể Thao Nam Hunter Street Cream DSMH10400KEM (Kem)</span>
-                <span>Giá: 780.000</span>
-                <span>Số lượng: 10</span>
+                <span class="product-title">Giày Thể Thao Nam Hunter Street Cream DSMH10400KEM (Kem)</span><br>
+                <span class="product-money">Giá: </span> <span>780.000đ</span><br>
+                <span class="product-qty">Số lượng: </span><span>10</span><br>
             </div>
-        </div>
-
+        </div> -->
     </div>
+    <table>
+        <thead>
+            <tr> 
+                <td class="tdId">ID</td>
+                <td class="tdImg">Ảnh</td>
+                <td class="tdName">Tên sản phẩm</td>
+                <td class="tdCate">Phân loại</td>
+                <td class="tdPrice">Giá</td>
+                <td class="tdBtn"></td>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+        <!-- <tr>
+            <td>
+                10001
+            </td>
+            <td>
+                <img class="product-img" src="./img/product1.webp" alt="">
+            </td>
+            <td>
+                Giày Thể Thao Nam Hunter Street Cream
+            </td>
+            <td>
+                Nam
+            </td>
+            <td>
+                781,000đ
+            </td>
+            <td>
+                <a class="btn-edt">
+                    <i class="fa-sharp fa-solid fa-gear"></i>
+                </a>
+                <br>
+                <a class="btn-dlt">
+                    <i class="fa-sharp fa-solid fa-circle-xmark"></i>
+                </a>
+            </td>
+        </tr> -->
+    </table>
 </div>
