--- a/product.html
+++ b/product.html
@@ -145,8 +145,8 @@
                 </select>
                 <br>
                 <div class="buttonBox">
-                <button class="buy" type="button"> Mua Ngay </button> <!--nút mua hàng-->
-                <button class="add" type="button"> Thêm Vào Giỏ Hàng </button> <!--Nút thêm vào giỏ hàng -->
+                <a href="#"><button class="buy" type="button"> Mua Ngay </button></a> <!--nút mua hàng-->
+                <a href="#"><button class="add" type="button"> Thêm Vào Giỏ Hàng </button></a> <!--Nút thêm vào giỏ hàng -->
                 </div>  
             </div>
         </div>
